force-app/main/default/objects/Contact/fields/Gender_Free_Text__c.field-meta.xml
<CustomField>
    <fullName>Gender_Free_Text__c</fullName>
    <label>Gender Free Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>