force-app/main/default/objects/Contact/fields/Gender_Free_Text_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Gender_Free_Text_Last_Updated__c</fullName>
    <label>Gender Free Text Last Updated</label>
    <type>DateTime</type>
</CustomField>