force-app/main/default/objects/Contact/fields/Gender_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Gender_Picklist__c</fullName>
    <label>Gender Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Non-Binary</fullName>
            </value>
            <value>
                <fullName>Trans</fullName>
            </value>
            <value>
                <fullName>Creative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>