force-app/main/default/objects/Contact/fields/Gender_Picklist_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Gender_Picklist_Last_Updated__c</fullName>
    <label>Gender Picklist Last Updated</label>
    <type>DateTime</type>
</CustomField>